--- a/chatbot.html
+++ b/chatbot.html
@@ -45,7 +45,8 @@
     
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     <df-messenger
-        oauth-client-id="YOUR-CLIENT-ID"
+<!--        oauth-client-id="YOUR-CLIENT-ID"-->
+        location="us-central1"
         project-id="project-6723c9bd-d598-4b7f-9ee"
         agent-id="aeaf273c-f3f5-44cc-b1cf-c2d27a89b311"
         language-code="en"
