--- a/chatbot.html
+++ b/chatbot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dialogflow CX Bot Test Page</title>
+    <title>Dialogflow CX Bot Test Page new</title>
 
     <style>
         body {
