--- a/chatbot.html
+++ b/chatbot.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="container">
-        <h1>Dialogflow CX Chatbot Test</h1>
+        <h1>Dialogflow CX Chatbot Test new</h1>
         <p>
             This is a simple test page. Once you paste the Dialogflow CX Web Integration snippet
             below, you should see the chatbot icon appear at the bottom right.
