--- a/chatbot.html
+++ b/chatbot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dialogflow CX Bot Test Page new</title>
+    <title>Dialogflow CX Bot Test Page new 1</title>
 
     <style>
         body {
@@ -33,7 +33,7 @@
 <body>
 
     <div class="container">
-        <h1>Dialogflow CX Chatbot Test new</h1>
+        <h1>Dialogflow CX Chatbot Test new1</h1>
         <p>
             This is a simple test page. Once you paste the Dialogflow CX Web Integration snippet
             below, you should see the chatbot icon appear at the bottom right.
